<resources>
    <string name="app_name">HomeWork4_4</string>
    <string name="title_home">Home</string>
    \
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_profile">Profile</string>
    <string name="user_name">User name</string>
    <string name="edit">Edit</string>
    <string name="avatar">Avatar</string>
    <string name="save">Save</string>
    <string name="todo">TODO</string>
    <string name="skip">Skip</string>
    <string name="welcome_to">Welcome to</string>
    <string name="next">Next</string>
    <string name="task_categories">Task categories</string>
    <string name="write_down_and_complete_short_term_and_long_term_tasks">Write down and complete short-term and long-term tasks</string>
    <string name="increase_your_productivity_with">Increase your productivity with</string>
    <string name="start">Start</string>
    <string name="mark_as">Mark as</string>
    <string name="title_all_tasks">All</string>
    <string name="tasks">Tasks</string>
    <string name="type_task_name">type task name</string>
    <string name="add">Add</string>
    <string name="select_project">Select project</string>
    <string name="project_selected">"Project selected: "</string>
    <string name="type_project_name">type project name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_project">My project</string>
    <string name="work_project">Work project</string>
    <string name="studies_project">Studies project</string>

</resources>