<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".content.projects.TaskEditFragment">

    <EditText
        android:inputType="textMultiLine"
        android:id="@+id/edit_text"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:hint="@string/type_task_name"
        android:importantForAutofill="no" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_selected"/>

        <TextView
            android:id="@+id/tv_selected_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Project"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_select_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_project"/>

    <Button
        android:layout_marginTop="32dp"
        android:layout_gravity="center"
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"/>

</LinearLayout>