<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.EditProfileFragment">

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_gravity="center"
        android:layout_marginBottom="96dp"
        android:src="@drawable/account_base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_marginTop="96dp"
        android:layout_gravity="center"
        android:hint="@string/user_name"
        android:layout_width="320dp"
        android:layout_height="48dp"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_marginBottom="64dp"
        android:layout_gravity="center|bottom"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</FrameLayout>