<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splash_onboarding.splash.onboarding.SecondFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center|top"
        android:layout_marginTop="128dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_categories"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_down_and_complete_short_term_and_long_term_tasks"
        android:textStyle="italic"
        android:padding="2dp"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="84dp"/>

    <Button
        android:id="@+id/btn_next"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"/>

</FrameLayout>